--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>MY LIFE</title>
 	</head>
+	
 	<body>
-	<h1> Hello World </h1>
+	<h1> <strong> Rules I Live By </strong> </h1>
+	<h2> <em> 1 </em> </h2>
+	<p> Life begins at the end of your comfort zone </p>
+	
+	<p> How many times to forgive someone?</p>
+	<ul>
+    <li>Once</li>
+    <li>Twice</li>
+    <li>Always</li>
+</ul>
+
+	<p> Some other rules</p>
+	<ol type="1">
+		<li value="1">live your life</li>
+		<li>shake your booty</li>
+		<li>always smile</li>
+	</ol>
+
+	<a href="http://www.thisblewmymind.com/100-rules-life-live/"> A Longer List</a> 
+
 	</body>
+
 </html>
