--- a/html/forms/example-form.html
+++ b/html/forms/example-form.html
@@ -1,4 +1,4 @@
-<form name="adventure" action="" method="post">
+<form name="adventure" action="https://httpbin.org/post" method="post">
   <fieldset>
     <div>
       <label>Full name:</label>
@@ -27,7 +27,7 @@
       <select name="bike">
         <option value="road">Road</option>
         <option value="road">Mountain</option>
-        <option value="road">Cyclocross</option>
+        <option value="road">Dirt</option>
       </select>
     </div>
 
