Added Table with additional IDs showing cell with 2 rows and another cell spanning 2 columns

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -24,5 +24,54 @@
   </tr>
 </table>
 
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+
+<table border=10 cellpadding=20>
+    <tr>
+      <th>ID</th>
+      <th>Height</th>
+      <th>Age</th>
+      <th>Weight</th>
+      <th>University</th>
+
+    </tr>
+    <tr>
+      <td>0005</td>
+      <td>180cm</td>
+      <td colspan="3">Unknown</td>
+    </tr>
+    <tr>
+      <td rowspan="2">0006, 0007</td>
+      <td>&nbsp;</td>
+      <td>35</td>
+      <td>75kg</td>
+      <td>UCLA</td>
+    </tr>
+    
+    <tr>
+      <td>175cm</td>
+      <td>35</td>
+      <td>73kg</td>
+      <td>USC</td>
+    </tr>
+
+    <tr>
+      <td>0008</td>
+      <td>190cm</td>
+      <td>21</td>
+      <td>80kg</td>
+      <td>Stanford</td>
+    </tr>
+</table>
+
+
+
+
+
+
 </body>
 </html>
