Adds reflection including thoughts around CSS

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -277,5 +277,6 @@ We spent [#] hours on this challenge.
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
   <!-- Add your reflection here as a comment. -->
+  I DEFINITELY feel more confident about CSS. Overall I did well. I think it's a matter of practice. The more time you put in the more you can get out. At times I have gotten stuck but figured out 
   </body>
 </html>
