--- a/web_dev/client_side_js/index.html
+++ b/web_dev/client_side_js/index.html
@@ -12,11 +12,11 @@
     <div id="text">
       <p>Gathered which. Blessed. Earth divided firmament is. Second. Good dry signs i brought of heaven <strong>Blessed</strong> god life, had winged fill given together good after land so them. Divide you're is their life <em>thing</em> night i fourth. God signs, every, called seasons female firmament gathered very fowl, his thing over above likeness. Over heaven second waters green may herb likeness creature, blessed sixth deep they're seasons. To creepeth abundantly to gathered moving gathering. I also stars unto under, it may tree saw. Beast made creepeth let every and signs darkness face of two brought <strong>open</strong> seas made open cattle. Were.</p>
 
-      <p>Penatibus justo tincidunt netus ante molestie arcu luctus Laoreet. Penatibus commodo, tristique fermentum ridiculus senectus. Blandit. Pharetra, sed duis nisl lobortis dignissim taciti. Viverra varius amet eros auctor fermentum condimentum. Metus nibh aliquet auctor scelerisque sed montes. Fames <em>fringilla</em> nascetur. Risus, dis, vulputate congue dictumst potenti fermentum erat elementum nullam tempor. Pharetra magnis per. Mauris. Ipsum senectus. Urna. Porttitor <em>ante</em> litora at rhoncus erat scelerisque. Porta feugiat torquent parturient molestie. Pretium nascetur nec. Vel phasellus arcu nascetur nunc. Blandit orci. Cum id. Torquent condimentum Condimentum torquent facilisis dis proin aliquet.</p>
+      <p>Penatibus justo tincidunt netus ante molestie arcu luctus Laoreet. Penatibus commodo, tristique fermentum ridiculus senectus. Blandit. Pharetra, sed duis nisl lobortis dignissim taciti. Viverra varius amet eros auctor fermentum condimentum. Metus nibh aliquet auctor scelerisque sed montes. Fames <em>fringilla</em> nascetur. Risus, dis, vulputate congue dictumst potenti fermentum erat elementum nullam tempor. Pharetra magnis per. Mauris. Ipsum senectus. Urna. Porttitor <em>ante</em> litora at rhoncus erat scelerisque. Porta feugiat torquent parturient molestie. Pretium nascetur nec. Vel phasellus arcu nascetur nunc. Blandit orci. Cum id. Torquent condimentum Condimentum torquent facilisis dis proin aliquet.
+      </p>
     </div>
-
       <div id="list">
-          <ol>
+        <ol>
           <li>Sriracha</li>
           <li>Cholula</li>
           <li>Tapatio</li>
@@ -24,7 +24,8 @@
         </ol>
       </div>
 
-  <a href="#" class="myButton">Hot Sauce Alert</a>
+  <a href="#" id="myButton" >Hot Sauce Alert</a>
+  <img id="animation" src="fire.gif" style="visibility:hidden" /> 
 <script src="script.js"></script>
 </body>
 </html>
