--- a/web_dev/client_side_js/index.html
+++ b/web_dev/client_side_js/index.html
@@ -25,7 +25,7 @@
       </div>
 
   <a href="#" id="myButton" >Hot Sauce Alert</a>
-  <img id="animation" src="fire.gif" style="visibility:hidden" /> 
+  <img id="animation" src="fire.gif" style="visibility:hidden"> 
 <script src="script.js"></script>
 </body>
 </html>
