--- a/web_dev/jquery/index.html
+++ b/web_dev/jquery/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
         <title>Sample Project</title>
-        <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
-        <script type='text/javascript' src='script.js'></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="jquery-1.12.0.min.js"></script>
 </head>
 <body>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
-        <br/><button>Toggle</button>
+        <br/><button id="b">Toggle</button>
 
         <br/>
         <p>Oh Shit...</p>
-        
+        <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
