--- a/web_dev/jquery/index.html
+++ b/web_dev/jquery/index.html
@@ -3,7 +3,6 @@
 <head>
         <title>Sample Project</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="jquery-1.12.0.min.js"></script>
 </head>
 <body>
         <div class="box"></div>
@@ -14,6 +13,8 @@
 
         <br/>
         <p>Oh Shit...</p>
+
+        <script src="jquery-1.12.3.js"></script>
         <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
